--- a/HTML/it/html-v1/index.html
+++ b/HTML/it/html-v1/index.html
@@ -29,24 +29,24 @@
     <!-- preloader closed -->
 
     <!-- header part start -->
-    <section class="header_area">
+    <header class="header_area">
         <div class="container">
             <div class="row align-items-center justify-content-between">
-                <div class="col-auto"><a href="index.html" class="logo"><img src="assets/images/logo.png"
-                            alt="Logo"></a></div>
-                <div class="col-auto">
+                <div class="col-lg-2 col-12 auto-col logo-col"><a href="index.html" class="logo"><img
+                            src="assets/images/logo.png" alt="Logo"></a></div>
+                <div class="col-lg-7 col-2 menu-col">
                     <div class="menu_area">
                         <ul>
-                            <li><a href="about.html">About Us</a></li>
                             <li><a href="solutions.html">Solutions</a></li>
                             <li><a href="careers.html">careers</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li><a href="resources.html">Resources</a></li>
                             <li><a href="calendar.html">Calendar</a></li>
                             <li><a href="buildit.html">BuildIT 2020</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-auto search-col">
+                <div class="col-lg-1 auto-col search-col">
                     <a class="header-search-btn"><i class="fa fa-search white-text"></i></a>
                     <!-- search panel open -->
                     <div class="overlay-search-panel">
@@ -58,10 +58,10 @@
                     </div>
                     <!-- search panel closed -->
                 </div>
-                <div class="col-auto"><a class="btn btn-solid">Get In Touch</a></div>
+                <div class="col-lg-2 right-col auto-col"><a class="btn btn-solid">Get In Touch</a></div>
             </div>
         </div>
-    </section>
+    </header>
     <!-- header part end -->
 
     <!-- banner area start -->
@@ -101,6 +101,7 @@
             <div>
                 <div class="big-banner-with-sideinfo">
                     <div class="image-frame">
+                        <div class="overlay-content-area"><h2 class="heading-lg white-text">Our<br>Services</h2></div>
                         <img src="assets/images/our-service-banner-1.jpg" alt="">
                     </div>
                     <div class="info-area wow fadeInLeft">
@@ -117,6 +118,7 @@
             <div>
                 <div class="big-banner-with-sideinfo">
                     <div class="image-frame">
+                        <div class="overlay-content-area"><h2 class="heading-lg white-text">Our<br>Services</h2></div>
                         <img src="assets/images/Helpdesk.png" alt="">
                     </div>
                     <div class="info-area">
@@ -132,6 +134,7 @@
             <div>
                 <div class="big-banner-with-sideinfo">
                     <div class="image-frame">
+                        <div class="overlay-content-area"><h2 class="heading-lg white-text">Our<br>Services</h2></div>
                         <img src="assets/images/Professional-&-Consulting-Services.png" alt="">
                     </div>
                     <div class="info-area wow fadeInLeft">
@@ -148,6 +151,7 @@
             <div>
                 <div class="big-banner-with-sideinfo">
                     <div class="image-frame">
+                        <div class="overlay-content-area"><h2 class="heading-lg white-text">Our<br>Services</h2></div>
                         <img src="assets/images/NOC-Services.png" alt="">
                     </div>
                     <div class="info-area">
@@ -237,8 +241,8 @@
                         hiring, and more.</p>
                 </div>
                 <div class="col-lg-12">
-                    <div class="expert-slide-slider-area">
-                        <div class="slider expert-slide-slider slick-white-arrow">
+                    <div class="expert-slide-slider-area white-v-dot">
+                        <div class="slider expert-slide-slider  slick-white-arrow">
 
                             <div>
                                 <div class="team-member-box-type-2 zoomin">
@@ -372,10 +376,132 @@
 
 
 
+    <!-- What happening section start -->
+    <section class="What_happening_sec row-block sec-padding">
+        <div class="container">
+            <div class="What_happening_title">
+                <h2 class="heading-lg wow fadeInDown">What's Happening at ITBD</h2>
+                <p>Relationships today often start in the digital world, but we believe face-to-face time is essential
+                    to building true partnerships. Sit
+                    down with our team and learn more about our solutions-at our events, industry conferences and
+                    speaking appearances.</p>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <div class="what_happening_img_box">
+            <div class="row">
+                <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12 what_happening_col_left">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12 col-xs-12 what_happening_inner_col_left">
+                            <div class="feed-box">
+                                <div class="feed-content-box">
+                                    <div class="feed-icon">
+                                        <img src="assets/images/Instagram_simple_icon.svg" alt="instagram icon"
+                                            class="feed-social-icon">
+                                    </div>
+                                    <div class="feed-content">
+                                        <h5>Lorem ipsum</h5>
+                                        <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse
+                                            velit odio, dapibus a laoreet eu, dignissim in libero.</p>
+                                    </div>
+                                </div>
+                                <div class="feed-img-box">
+                                    <div class="image-frame">
+                                        <div class="overlay-content-area" data-fancybox=""
+                                            href="http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4">
+                                            <a id="play-video" class="video-play-button" href="#"><span></span></a>
+                                        </div>
+                                        <img src="assets/images/insta-video.png" alt=" instargam video image"
+                                            class="card-image">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-12 col-xs-12 what_happening_inner_col_right">
+                            <div class="feed-box2">
+                                <div class="feed-content-box">
+                                    <img src="assets/images/twitter-img.png">
+                                </div>
+                                <div class="feed-img-box">
+                                    <div class="feed-icon">
+                                        <img src="assets/images/twitter.svg" alt="instagram icon"
+                                            class="feed-social-icon">
+                                    </div>
+                                    <div class="feed-content">
+                                        <h5>Lorem ipsum</h5>
+                                        <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse
+                                            velit odio, dapibus a laoreet eu, dignissim in libero.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12 col-xs-12 what_happening_inner_col_left">
+                            <div class="feed-box4">
+                                <div class="feed-img-box">
+                                    <div class="feed-icon">
+                                        <img src="assets/images/blog-img.png" alt="blog image">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-12 col-xs-12 what_happening_inner_col_right">
+                            <div class="feed-box4">
+                                <div class="feed-content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <h2>Blog</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 what_happening_col_right">
+                    <div class="row">
+                        <div class="col-md-12 what_happening_inner_col_left">
+                            <div class="feed-box5">
+                                <div class="feed-img-box">
+                                    <div class="feed-icon">
+                                        <img src="assets/images/facebook-logo.svg" alt="facebook icon"
+                                            class="feed-social-icon">
+                                    </div>
+                                    <div class="feed-content">
+                                        <h5>#Lorem ipsum</h5>
+                                    </div>
+                                </div>
+                            </div>
 
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 what_happening_inner_col_right">
+                            <div class="feed-box6">
+                                <div class="feed-img-box">
+                                    <div class="feed-icon">
+                                        <img src="assets/images/linkdin-img.png" alt="linkd in image">
+                                    </div>
+                                </div>
+                                <div class="feed-content-box">
+                                    <div class="linkdin-icon-box">
+                                        <img src="assets/images/LinkedIn Logo.svg" alt="linkdin icon"
+                                            class="feed-social-icon">
+                                    </div>
+                                    <div class="feed-content">
+                                        <h5>Lorem ipsum</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
+                                            sit amet, consectetur adipiscing elit.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </section>
 
-
+    <!-- What happening section end -->
 
 
 
@@ -390,7 +516,9 @@
                 <div class="col-md-6 right-col">
                     <div class="black-section-content-area">
                         <p class="heading-btm-bold-para">
-                            As part of the MSP community, we openly share our experiences, expertise and any resources that can help other MSPs grow. We take it to heart that our partners trust us with not only their business but that of their customers.
+                            As part of the MSP community, we openly share our experiences, expertise and any resources
+                            that can help other MSPs grow. We take it to heart that our partners trust us with not only
+                            their business but that of their customers.
                         </p>
                     </div>
                 </div>
@@ -403,7 +531,8 @@
                                 </div>
                                 <div class="community-content-box">
                                     <h5>Name 1</h5>
-                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit odio, dapibus a laoreet eu, dignissim in libero.</p>
+                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit
+                                        odio, dapibus a laoreet eu, dignissim in libero.</p>
                                 </div>
                             </div>
                             <div class="item">
@@ -412,7 +541,8 @@
                                 </div>
                                 <div class="community-content-box">
                                     <h5>Name 2</h5>
-                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit odio, dapibus a laoreet eu, dignissim in libero.</p>
+                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit
+                                        odio, dapibus a laoreet eu, dignissim in libero.</p>
                                 </div>
                             </div>
                             <div class="item">
@@ -421,7 +551,8 @@
                                 </div>
                                 <div class="community-content-box">
                                     <h5>Name 3</h5>
-                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit odio, dapibus a laoreet eu, dignissim in libero.</p>
+                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit
+                                        odio, dapibus a laoreet eu, dignissim in libero.</p>
                                 </div>
                             </div>
 
@@ -431,7 +562,8 @@
                                 </div>
                                 <div class="community-content-box">
                                     <h5>Name 4</h5>
-                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit odio, dapibus a laoreet eu, dignissim in libero.</p>
+                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit
+                                        odio, dapibus a laoreet eu, dignissim in libero.</p>
                                 </div>
                             </div>
 
@@ -441,7 +573,8 @@
                                 </div>
                                 <div class="community-content-box">
                                     <h5>Name 5</h5>
-                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit odio, dapibus a laoreet eu, dignissim in libero.</p>
+                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit
+                                        odio, dapibus a laoreet eu, dignissim in libero.</p>
                                 </div>
                             </div>
 
@@ -451,9 +584,10 @@
                                 </div>
                                 <div class="community-content-box">
                                     <h5>Name 6</h5>
-                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit odio, dapibus a laoreet eu, dignissim in libero.</p>
+                                    <p>Maecenas vestibulum dapibus pharetra. Aenean non sodales erat. Suspendisse velit
+                                        odio, dapibus a laoreet eu, dignissim in libero.</p>
                                 </div>
-                            </div>          
+                            </div>
 
                         </div>
 
@@ -483,14 +617,20 @@
                     </div>
                     <div class="col-md-6 col-sm-12 col-xs12">
                         <div class="footer-right">
-                            <p>10 Exchange Place 17th floor Jersey City NJ 07302</p>
-                            <a href="tel:212 888 1919" class="contact-no">212 888 1919</a>
-                            <ul class="social-icon-list">
-                                <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            </ul>
+                            <div class="row">
+                                <div class="col-md-12 order-one">
+                                    <p>10 Exchange Place 17th floor Jersey City NJ 07302</p>
+                                    <a href="tel:212 888 1919" class="contact-no">212 888 1919</a>
+                                </div>
+                                <div class="col-md-12 order-two">
+                                        <ul class="social-icon-list">
+                                            <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                        </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
