--- a/HTML/it/html-v1/bk/ui.html
+++ b/HTML/it/html-v1/bk/ui.html
@@ -6,65 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IT BY DESIGN</title>
 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,900&display=swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap">
-        <link rel='stylesheet' href='assets/fonts/fontawesome/font-awesome.min.css' type='text/css' media='all' />
-        
-        <link rel="stylesheet" href="assets/css/bootstrap.css">
-        <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" />
-        <link rel="stylesheet" href="assets/css/slick.css">
-        <link rel="stylesheet" href="assets/css/slick-theme.css">
-        <link rel="stylesheet" href="assets/css/slick-custom.css">
-        <link rel="stylesheet" href="assets/css/animate.css">
-        <link rel="stylesheet" href="assets/css/select2.css" />
-        <link rel="stylesheet" href="assets/css/custom.css">
-        <link rel="stylesheet" href="assets/css/custom-responsive.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,900&display=swap">
+    <link rel='stylesheet' href='assets/fonts/fontawesome/font-awesome.min.css' type='text/css' media='all' />
+
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom-responsive.css">
 </head>
 <body>
 
 <!-- header part start -->
-<header class="header_area">
+<section class="header_area">
     <div class="container">
         <div class="row align-items-center justify-content-between">
-            <div class="col-lg-2 col-12 auto-col logo-col"><a href="index.html" class="logo"><img
-                        src="assets/images/logo.png" alt="Logo"></a></div>
-            <div class="col-lg-7 col-2 menu-col">
+            <div class="col-auto"><a href="index.html" class="logo"><img src="assets/images/logo.png" alt="Logo" ></a></div>
+            <div class="col-auto">
                 <div class="menu_area">
                     <ul>
-                        <li><a href="#">Solutions</a>
-                            <ul>
-                                <li><a href="#">Solutions</a></li>
-                                <li><a href="careers.html">careers</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="resources.html">Resources</a></li>
-                                <li><a href="calendar.html">Calendar</a></li>
-                                <li><a href="buildit.html">BuildIT 2020</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="careers.html">careers</a></li>
                         <li><a href="about.html">About Us</a></li>
+                        <li><a href="solutions.html">Solutions</a></li>
+                        <li><a href="careers.html">careers</a></li>
                         <li><a href="resources.html">Resources</a></li>
                         <li><a href="calendar.html">Calendar</a></li>
                         <li><a href="buildit.html">BuildIT 2020</a></li>
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-1 auto-col search-col">
-                <a class="header-search-btn"><i class="fa fa-search white-text"></i></a>
-                <!-- search panel open -->
-                <div class="overlay-search-panel">
-                    <a href="javascript:void(0);" class="search-close-btn"><i class="fa fa-times"></i></a>
-                    <div class="search-field-area">
-                        <input type="text" placeholder="Search content...">
-                        <button type="submit"><i class="fa fa-search"></i> Search</button>
-                    </div>
-                </div>
-                <!-- search panel closed -->
-            </div>
-            <div class="col-lg-2 right-col auto-col"><a class="btn btn-solid">Get In Touch</a></div>
+            <div class="col-auto" style="color:#fff;"><i class="fa fa-search"></i></div>
+            <div class="col-auto"><a class="btn btn-solid">Get In Touch</a></div>
         </div>
     </div>
-</header>
+</section>
 <!-- header part end -->
 
 <!-- banner area start -->
@@ -447,10 +420,6 @@
 <script src="assets/js/bootstrap.js"></script>
 <script src="assets/js/bootstrap.bundle.js"></script>
 <script src="assets/js/jquery.fancybox.min.js"></script>
-<script src="assets/js/slick.min.js"></script>
-<script src="assets/js/slick-animation.min.js"></script>
-<script src="assets/js/wow.js"></script>
-<script src="assets/js/select2.js"></script>
 <script src="assets/js/custom.js"></script>
 <!-- js end -->
 
