--- a/HTML/it/html-v1/ui.html
+++ b/HTML/it/html-v1/ui.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="assets/css/slick-custom.css">
         <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet" href="assets/css/select2.css" />
+        <link rel="stylesheet" href="assets/css/header-menu.css" />
         <link rel="stylesheet" href="assets/css/custom.css">
         <link rel="stylesheet" href="assets/css/custom-responsive.css">
 </head>
@@ -31,7 +32,26 @@
             <div class="col-lg-7 col-2 menu-col">
                 <div class="menu_area">
                     <ul>
-                        <li><a href="#">Solutions</a>
+                        <li><a href="###">Solutions</a>
+                            <ul>
+                                <li><a href="#">Solutions</a></li>
+                                <li><a href="careers.html">careers</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="resources.html">Resources</a></li>
+                                <li><a href="calendar.html">Calendar</a></li>
+                                <li><a href="buildit.html">BuildIT 2020</a>
+                                    <ul>
+                                        <li><a href="#">Solutions</a></li>
+                                        <li><a href="careers.html">careers</a></li>
+                                        <li><a href="about.html">About Us</a></li>
+                                        <li><a href="resources.html">Resources</a></li>
+                                        <li><a href="calendar.html">Calendar</a></li>
+                                        <li><a href="buildit.html">BuildIT 2020</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li><a href="careers.html">careers</a>
                             <ul>
                                 <li><a href="#">Solutions</a></li>
                                 <li><a href="careers.html">careers</a></li>
@@ -41,7 +61,6 @@
                                 <li><a href="buildit.html">BuildIT 2020</a></li>
                             </ul>
                         </li>
-                        <li><a href="careers.html">careers</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="resources.html">Resources</a></li>
                         <li><a href="calendar.html">Calendar</a></li>
