--- a/HTML/it/html-v1/solution.html
+++ b/HTML/it/html-v1/solution.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/slick-custom.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="assets/css/select2.css" />
+    <link rel="stylesheet" href="assets/css/header-menu.css" />
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/custom-responsive.css">
 </head>
