--- a/wordpress/Custom-shortcode-with-loop.html
+++ b/wordpress/Custom-shortcode-with-loop.html
@@ -1,4 +1,3 @@
-
 function dotirating_function( $args ) {
   
     // set up default parameters
@@ -23,7 +22,10 @@ function dotirating_function( $args ) {
 		$string .= '<ul>';
 		while( $query->have_posts() ){
 			$query->the_post();
-			$string .= '<li>' . get_the_title() . '</li>';
+			$string .= '<li><div>';
+			$string .= get_the_title();
+			$string .= '<img src="'.wp_get_attachment_url( get_post_thumbnail_id($post->ID), 'thumbnail' ).'" width="50px">';
+			$string .= '</div></li>';
 		}
 		$string .= '</ul>';
 	}else{
