--- a/HTML/html-v7/index.html
+++ b/HTML/html-v7/index.html
@@ -74,7 +74,7 @@
                             </li>
                             <li>
                                 <div class="info-icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
-                                <div class="info-content"><h4>Email us</h4><a href="tel:Call Us+1 403-695-4346">+1 403-695-4346</a></div>
+                                <div class="info-content"><h4>Email us</h4><a href="mailto:demoemailaccount@gmail.com">demoemailaccount@gmail.com</a></div>
                             </li>
                         </ul>
                     </div>
