--- a/HTML/html-v7/shop.html
+++ b/HTML/html-v7/shop.html
@@ -69,12 +69,17 @@
                     <div class="col col-xl-8 col-lg-8 col-8">
                         <ul class="contact-iconic-info justify-content-end">
                             <li>
-                                <div class="info-icon" style="padding-top: 5px;"><i class="fa fa-phone" aria-hidden="true"></i></div>
-                                <div class="info-content"><h4>Call Us</h4><a href="tel:Call Us+1 403-695-4346">+1 403-695-4346</a></div>
+                                <div class="info-icon" style="padding-top: 5px;"><i class="fa fa-phone" aria-hidden="true"></i>
+                                </div>
+                                <div class="info-content">
+                                    <h4>Call Us</h4><a href="tel:Call Us+1 403-695-4346">+1 403-695-4346</a>
+                                </div>
                             </li>
                             <li>
                                 <div class="info-icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
-                                <div class="info-content"><h4>Email us</h4><a href="tel:Call Us+1 403-695-4346">+1 403-695-4346</a></div>
+                                <div class="info-content">
+                                    <h4>Email us</h4><a href="mailto:demoemailaccount@gmail.com">demoemailaccount@gmail.com</a>
+                                </div>
                             </li>
                         </ul>
                     </div>
