--- a/office/KAEC_BIK/HTML/kaec-bik/index.html
+++ b/office/KAEC_BIK/HTML/kaec-bik/index.html
@@ -14,17 +14,15 @@
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
     <!-- fonts -->
     <link href="assets/fonts/font-awesome/font-awesome.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,600,700|Roboto:400,500,700&display=swap" rel="stylesheet">
     <!-- base css -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/header-menu.css" rel="stylesheet">
     <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap-select.css" rel="stylesheet">
-    <link href="assets/css/image-lightbox.min.css" rel="stylesheet">
     <link href="assets/css/animate.css" rel="stylesheet">
-    <link href="assets/css/margin-padding.css" rel="stylesheet">
     <!-- custom -->
     <link href="assets/css/custom.css" rel="stylesheet">
     <link href="assets/css/custom-responsive.css" rel="stylesheet">
@@ -51,20 +49,105 @@
                 <div class="col-lg-7 menu-col">
                     <nav class="header-main-menu">
                         <ul>
-                            <li>HOME</li>
-                            <li>COMMUNITIES</li>
-                            <li>WALK IN THE CITY</li>
-                            <li>CONTACT US</li>                            
+                            <li class="current-item"><a href="#">HOME</a>
+                                <!-- <ul>
+                                    <li><a href="#">HOME</a></li>
+                                    <li><a href="#">COMMUNITIES</a></li>
+                                    <li><a href="#">WALK IN THE CITY</a></li>
+                                    <li><a href="#">CONTACT US</a>
+                                        <ul>
+                                            <li><a href="#">HOME</a></li>
+                                            <li><a href="#">COMMUNITIES</a></li>
+                                            <li><a href="#">WALK IN THE CITY</a></li>
+                                            <li><a href="#">CONTACT US</a></li>
+                                        </ul>
+                                    </li>
+                                </ul> -->
+                            </li>
+                            <li><a href="#">COMMUNITIES</a></li>
+                            <li><a href="#">WALK IN THE CITY</a></li>
+                            <li><a href="#">CONTACT US</a></li>                            
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-2 contact-info-col">
-                    ggfdgdfg
+                    <div class="header-iconic-info">
+                        <ul>
+                            <li>
+                                <a href="#">Arabic</a>
+                            </li>
+                            <li class="only-icon">
+                                <a href="#"><img src="assets/images/icons/like-icon.png" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="header-iconic-info">
+                        <ul>
+                            <li>
+                                <a href="tel:8001180010"><img src="assets/images/icons/header-phone-icon.png" alt=""> 800 11 800 10</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
     <!-- header closed -->
+
+
+    <!-- search filter css start -->
+    <section class="search-filter-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="search-filter-wrap-area">
+                        <div class="search-filter-col">
+                            <select id="mounth">
+                                <option value="hide">-- Month --</option>
+                                <option value="januaryy" size="04">Januaryi </option>
+                                <option value="february" size="34">February</option>
+                                <option value="march">March</option>
+                                <option value="april">April</option>
+                                <option value="may">May</option>
+                                <option value="june">June</option>
+                                <option value="july">July</option>
+                                <option value="august">August</option>
+                                <option value="september">September</option>
+                                <option value="october">October</option>
+                                <option value="november">November</option>
+                                <option value="december">December</option>
+                            </select>
+                        </div>
+                        <div class="search-filter-col">
+                            <select id="date">
+                                <option value="hide">-- Month --</option>
+                                <option value="january">January</option>
+                                <option value="february">February</option>
+                                <option value="march">March</option>
+                                <option value="april">April</option>
+                                <option value="may">May</option>
+                                <option value="june">June</option>
+                                <option value="july">July</option>
+                                <option value="august">August</option>
+                                <option value="september">September</option>
+                                <option value="october">October</option>
+                                <option value="november">November</option>
+                                <option value="december">December</option>
+                            </select>
+                        </div>
+                        <div class="search-filter-col">f</div>
+                        <div class="search-filter-col">f</div>
+                        <div class="search-filter-col"><a class="rr">fdfdf</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- search filter css endec -->
+    <div class="vvv"></div>
+
+
+    
 
 
 
@@ -82,8 +165,8 @@
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/bootstrap-multiselect-dropdown.js"></script>
-    <script src="assets/js/image-lightbox.js"></script>
-    <script src="assets/js/multi-label-menu.js"></script>
+    <!-- <script src="assets/js/multi-label-menu.js"></script> -->
+    <script src="assets/js/header-menu.js"></script>
     <!-- CUSTOM SCRIPT -->
     <script src="assets/js/script.js"></script>
 </body>
