--- a/office/KAEC_BIK/HTML/kaec-bik/property-details.html
+++ b/office/KAEC_BIK/HTML/kaec-bik/property-details.html
@@ -22,12 +22,13 @@
     <!-- base css -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/header-menu.css" rel="stylesheet">
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
+    <link href="assets/css/slick.css" rel="stylesheet">
+    <link href="assets/css/slick-custom.css" rel="stylesheet">
     <link href="assets/css/bootstrap-select.css" rel="stylesheet">
-    <link href="assets/css/custom-dropdown.css" rel="stylesheet">
     <link href="assets/css/animate.css" rel="stylesheet">
     <!-- custom -->
     <link href="assets/css/custom.css" rel="stylesheet">
+    <link href="assets/css/thumbnail-image-gallery.css" rel="stylesheet">
     <link href="assets/css/custom-responsive.css" rel="stylesheet">
 
 
@@ -100,19 +101,26 @@
 
 
     <!-- search filter css start -->
-    <section class="search-filter-section">
+    <section class="search-filter-section" style="display: none;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="search-filter-wrap-area">
                         <div class="search-filter-col">
-                            <select id="propertyType">
-                                <option value="hide">Property Type</option>
-                                <option value="Apartment" size="12">Apartment</option>
-                                <option value="Plot" size="5">Plot</option>
-                                <option value="TownHome" size="4">Town Home</option>
-                                <option value="PairedHome" size="8">Paired Home</option>
-                                <option value="Villa" size="3">Villa</option>
+                            <select id="mounth">
+                                <option value="hide">-- Month --</option>
+                                <option value="januaryy" size="04">Januaryi </option>
+                                <option value="february" size="34">February</option>
+                                <option value="march">March</option>
+                                <option value="april">April</option>
+                                <option value="may">May</option>
+                                <option value="june">June</option>
+                                <option value="july">July</option>
+                                <option value="august">August</option>
+                                <option value="september">September</option>
+                                <option value="october">October</option>
+                                <option value="november">November</option>
+                                <option value="december">December</option>
                             </select>
                         </div>
                         <div class="search-filter-col">
@@ -143,7 +151,82 @@
     <!-- search filter css endec -->
 
 
-    <div style="width:100%; height:600px;"></div>
+    <!-- property detail page area open -->
+    <section class="innerpage-with-tp-border">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumb">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="#">Communities</a></li>
+                            <li><a href="#">Al Shurooq</a></li>
+                            <li><span>Apartment In Al Shurooq</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-9">
+
+                    <!-- slider area open -->
+                    <div class="thumbnail-image-gallery-slider-area">
+                        <div class="slider thumbnail-image-gallery-slider">
+                            <div>
+                                <div class="property-big-image">
+                                    <img src="assets/images/property-detail/property-image-1.jpg" alt="">
+                                </div>
+                            </div>
+                            <div>
+                                <div class="property-big-image">
+                                    <img src="assets/images/property-detail/property-image-2.jpg" alt="">
+                                </div>
+                            </div>
+                            <div>
+                                <h3>3</h3>
+                            </div>
+                            <div>
+                                <h3>4</h3>
+                            </div>
+                            <div>
+                                <h3>5</h3>
+                            </div>
+                        </div>
+                        <div class="slider thumb-for-thumbnail-image-gallery-slider">
+                            <div>
+                                <h3>1</h3>
+                            </div>
+                            <div>
+                                <h3>2</h3>
+                            </div>
+                            <div>
+                                <h3>3</h3>
+                            </div>
+                            <div>
+                                <h3>4</h3>
+                            </div>
+                            <div>
+                                <h3>5</h3>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!-- slider area closed -->
+
+
+
+                </div>
+                <div class="col-lg-3">
+                    <div class="white-border-box">
+                        <div class="white-border-padding">
+                            ffdfgf
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- property detail page area closed -->
 
 
     <!-- footer start -->
@@ -199,7 +282,7 @@
     <!-- PLUGINS SCRIPT -->
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/bootstrap-multiselect-dropdown.js"></script>
     <!-- <script src="assets/js/multi-label-menu.js"></script> -->
