--- a/office/KAEC_BIK/HTML/kaec-bik/ui.html
+++ b/office/KAEC_BIK/HTML/kaec-bik/ui.html
@@ -183,13 +183,16 @@
     <!-- PLUGINS SCRIPT -->
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/bootstrap-multiselect-dropdown.js"></script>
+    <script src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="assets/js/jquery.multipurpose_tabcontent.js"></script>
     <!-- <script src="assets/js/multi-label-menu.js"></script> -->
     <script src="assets/js/header-menu.js"></script>
     <!-- CUSTOM SCRIPT -->
     <script src="assets/js/script.js"></script>
+    
 </body>
 
 </html>
