--- a/office/KAEC_BIK/HTML/kaec-bik/index.html
+++ b/office/KAEC_BIK/HTML/kaec-bik/index.html
@@ -16,7 +16,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <!-- fonts -->
     <link href="assets/fonts/font-awesome/font-awesome.css" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,600,700|Roboto:400,500,700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,600,700|Roboto:400,500,700&display=swap" rel="stylesheet">
     <!-- base css -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/slick.css" rel="stylesheet">
@@ -53,7 +53,7 @@
                         <nav class="header-main-menu">
                             <ul class="head-menulist">
                                 <li class="current-item"><a href="#">HOME</a>
-                                    <ul>
+                                    <!-- <ul>
                                         <li><a href="#">HOME</a></li>
                                         <li><a href="#">COMMUNITIES</a></li>
                                         <li><a href="#">WALK IN THE CITY</a></li>
@@ -65,7 +65,7 @@
                                                 <li><a href="#">CONTACT US</a></li>
                                             </ul>
                                         </li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li><a href="#">COMMUNITIES</a></li>
                                 <li><a href="#">WALK IN THE CITY</a></li>
